syntax = "proto3";
package realfin.realfin;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "realfin/realfin/params.proto";

option go_package = "realfin/x/realfin/types";

// GenesisState defines the realfin module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}
