import { GeneratedType } from "@cosmjs/proto-signing";
import { MsgIBCWriteAcknowledgementResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/ibc";
import { QueryContractsByCreatorRequest } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { CodeGrant } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/authz";
import { MsgIBCSend } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/ibc";
import { MsgInstantiateContract } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { QueryContractsByCodeRequest } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { QueryCodeRequest } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { QueryBuildAddressResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { InstantiateContract2Proposal } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/proposal_legacy";
import { GenesisState } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/genesis";
import { QuerySmartContractStateResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { StoreCodeAuthorization } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/authz";
import { MaxCallsLimit } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/authz";
import { MaxFundsLimit } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/authz";
import { AbsoluteTxPosition } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/types";
import { QueryCodesRequest } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { UpdateInstantiateConfigProposal } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/proposal_legacy";
import { Contract } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/genesis";
import { QueryContractInfoRequest } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { QueryCodeInfoRequest } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { PinCodesProposal } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/proposal_legacy";
import { Sequence } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/genesis";
import { QueryWasmLimitsConfigRequest } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { SudoContractProposal } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/proposal_legacy";
import { MsgUpdateInstantiateConfigResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { QueryRawContractStateResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { QueryPinnedCodesResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { MsgUpdateContractLabel } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { MsgInstantiateContract2Response } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { MsgUpdateParamsResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { ClearAdminProposal } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/proposal_legacy";
import { MsgInstantiateContract2 } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { MsgUpdateParams } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { MsgInstantiateContractResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { Params } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/types";
import { ExecuteContractProposal } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/proposal_legacy";
import { UnpinCodesProposal } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/proposal_legacy";
import { MsgSudoContract } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { Model } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/types";
import { ContractCodeHistoryEntry } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/types";
import { AccessConfig } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/types";
import { AllowAllMessagesFilter } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/authz";
import { CodeInfo } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/types";
import { QueryWasmLimitsConfigResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { AcceptedMessagesFilter } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/authz";
import { MsgSudoContractResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { MigrateContractProposal } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/proposal_legacy";
import { MsgClearAdmin } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { MsgMigrateContractResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { MsgAddCodeUploadParamsAddressesResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { QueryCodeResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { QueryCodesResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { ContractExecutionAuthorization } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/authz";
import { AccessConfigUpdate } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/proposal_legacy";
import { MsgPinCodesResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { QueryRawContractStateRequest } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { UpdateAdminProposal } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/proposal_legacy";
import { MsgMigrateContract } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { MsgStoreAndMigrateContract } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { QueryPinnedCodesRequest } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { StoreAndInstantiateContractProposal } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/proposal_legacy";
import { CodeInfoResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { StoreCodeProposal } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/proposal_legacy";
import { MsgUnpinCodesResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { QueryAllContractStateRequest } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { MsgExecuteContract } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { ContractInfo } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/types";
import { MsgClearAdminResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { QueryContractHistoryRequest } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { QueryContractHistoryResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { QueryBuildAddressRequest } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { CombinedLimit } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/authz";
import { Code } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/genesis";
import { InstantiateContractProposal } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/proposal_legacy";
import { MsgStoreCode } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { MsgUnpinCodes } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { QueryContractInfoResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { MsgIBCCloseChannel } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/ibc";
import { MsgStoreAndMigrateContractResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { QueryContractsByCodeResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { QueryParamsResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { QueryContractsByCreatorResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { ContractGrant } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/authz";
import { MsgExecuteContractResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { MsgUpdateAdminResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { MsgStoreCodeResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { MsgRemoveCodeUploadParamsAddressesResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { QueryParamsRequest } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { MsgIBCSendResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/ibc";
import { QueryAllContractStateResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { QueryCodeInfoResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { AccessTypeParam } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/types";
import { MsgUpdateAdmin } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { MsgPinCodes } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { MsgAddCodeUploadParamsAddresses } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { MsgRemoveCodeUploadParamsAddresses } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { MsgUpdateContractLabelResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { MsgUpdateInstantiateConfig } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { QuerySmartContractStateRequest } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/query";
import { AcceptedMessageKeysFilter } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/authz";
import { MsgStoreAndInstantiateContract } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { MsgStoreAndInstantiateContractResponse } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/tx";
import { ContractMigrationAuthorization } from "./types/../../../../go/pkg/mod/github.com/!cosm!wasm/wasmd@v0.54.0/proto/cosmwasm/wasm/v1/authz";

const msgTypes: Array<[string, GeneratedType]>  = [
    ["/cosmwasm.wasm.v1.MsgIBCWriteAcknowledgementResponse", MsgIBCWriteAcknowledgementResponse],
    ["/cosmwasm.wasm.v1.QueryContractsByCreatorRequest", QueryContractsByCreatorRequest],
    ["/cosmwasm.wasm.v1.CodeGrant", CodeGrant],
    ["/cosmwasm.wasm.v1.MsgIBCSend", MsgIBCSend],
    ["/cosmwasm.wasm.v1.MsgInstantiateContract", MsgInstantiateContract],
    ["/cosmwasm.wasm.v1.QueryContractsByCodeRequest", QueryContractsByCodeRequest],
    ["/cosmwasm.wasm.v1.QueryCodeRequest", QueryCodeRequest],
    ["/cosmwasm.wasm.v1.QueryBuildAddressResponse", QueryBuildAddressResponse],
    ["/cosmwasm.wasm.v1.InstantiateContract2Proposal", InstantiateContract2Proposal],
    ["/cosmwasm.wasm.v1.GenesisState", GenesisState],
    ["/cosmwasm.wasm.v1.QuerySmartContractStateResponse", QuerySmartContractStateResponse],
    ["/cosmwasm.wasm.v1.StoreCodeAuthorization", StoreCodeAuthorization],
    ["/cosmwasm.wasm.v1.MaxCallsLimit", MaxCallsLimit],
    ["/cosmwasm.wasm.v1.MaxFundsLimit", MaxFundsLimit],
    ["/cosmwasm.wasm.v1.AbsoluteTxPosition", AbsoluteTxPosition],
    ["/cosmwasm.wasm.v1.QueryCodesRequest", QueryCodesRequest],
    ["/cosmwasm.wasm.v1.UpdateInstantiateConfigProposal", UpdateInstantiateConfigProposal],
    ["/cosmwasm.wasm.v1.Contract", Contract],
    ["/cosmwasm.wasm.v1.QueryContractInfoRequest", QueryContractInfoRequest],
    ["/cosmwasm.wasm.v1.QueryCodeInfoRequest", QueryCodeInfoRequest],
    ["/cosmwasm.wasm.v1.PinCodesProposal", PinCodesProposal],
    ["/cosmwasm.wasm.v1.Sequence", Sequence],
    ["/cosmwasm.wasm.v1.QueryWasmLimitsConfigRequest", QueryWasmLimitsConfigRequest],
    ["/cosmwasm.wasm.v1.SudoContractProposal", SudoContractProposal],
    ["/cosmwasm.wasm.v1.MsgUpdateInstantiateConfigResponse", MsgUpdateInstantiateConfigResponse],
    ["/cosmwasm.wasm.v1.QueryRawContractStateResponse", QueryRawContractStateResponse],
    ["/cosmwasm.wasm.v1.QueryPinnedCodesResponse", QueryPinnedCodesResponse],
    ["/cosmwasm.wasm.v1.MsgUpdateContractLabel", MsgUpdateContractLabel],
    ["/cosmwasm.wasm.v1.MsgInstantiateContract2Response", MsgInstantiateContract2Response],
    ["/cosmwasm.wasm.v1.MsgUpdateParamsResponse", MsgUpdateParamsResponse],
    ["/cosmwasm.wasm.v1.ClearAdminProposal", ClearAdminProposal],
    ["/cosmwasm.wasm.v1.MsgInstantiateContract2", MsgInstantiateContract2],
    ["/cosmwasm.wasm.v1.MsgUpdateParams", MsgUpdateParams],
    ["/cosmwasm.wasm.v1.MsgInstantiateContractResponse", MsgInstantiateContractResponse],
    ["/cosmwasm.wasm.v1.Params", Params],
    ["/cosmwasm.wasm.v1.ExecuteContractProposal", ExecuteContractProposal],
    ["/cosmwasm.wasm.v1.UnpinCodesProposal", UnpinCodesProposal],
    ["/cosmwasm.wasm.v1.MsgSudoContract", MsgSudoContract],
    ["/cosmwasm.wasm.v1.Model", Model],
    ["/cosmwasm.wasm.v1.ContractCodeHistoryEntry", ContractCodeHistoryEntry],
    ["/cosmwasm.wasm.v1.AccessConfig", AccessConfig],
    ["/cosmwasm.wasm.v1.AllowAllMessagesFilter", AllowAllMessagesFilter],
    ["/cosmwasm.wasm.v1.CodeInfo", CodeInfo],
    ["/cosmwasm.wasm.v1.QueryWasmLimitsConfigResponse", QueryWasmLimitsConfigResponse],
    ["/cosmwasm.wasm.v1.AcceptedMessagesFilter", AcceptedMessagesFilter],
    ["/cosmwasm.wasm.v1.MsgSudoContractResponse", MsgSudoContractResponse],
    ["/cosmwasm.wasm.v1.MigrateContractProposal", MigrateContractProposal],
    ["/cosmwasm.wasm.v1.MsgClearAdmin", MsgClearAdmin],
    ["/cosmwasm.wasm.v1.MsgMigrateContractResponse", MsgMigrateContractResponse],
    ["/cosmwasm.wasm.v1.MsgAddCodeUploadParamsAddressesResponse", MsgAddCodeUploadParamsAddressesResponse],
    ["/cosmwasm.wasm.v1.QueryCodeResponse", QueryCodeResponse],
    ["/cosmwasm.wasm.v1.QueryCodesResponse", QueryCodesResponse],
    ["/cosmwasm.wasm.v1.ContractExecutionAuthorization", ContractExecutionAuthorization],
    ["/cosmwasm.wasm.v1.AccessConfigUpdate", AccessConfigUpdate],
    ["/cosmwasm.wasm.v1.MsgPinCodesResponse", MsgPinCodesResponse],
    ["/cosmwasm.wasm.v1.QueryRawContractStateRequest", QueryRawContractStateRequest],
    ["/cosmwasm.wasm.v1.UpdateAdminProposal", UpdateAdminProposal],
    ["/cosmwasm.wasm.v1.MsgMigrateContract", MsgMigrateContract],
    ["/cosmwasm.wasm.v1.MsgStoreAndMigrateContract", MsgStoreAndMigrateContract],
    ["/cosmwasm.wasm.v1.QueryPinnedCodesRequest", QueryPinnedCodesRequest],
    ["/cosmwasm.wasm.v1.StoreAndInstantiateContractProposal", StoreAndInstantiateContractProposal],
    ["/cosmwasm.wasm.v1.CodeInfoResponse", CodeInfoResponse],
    ["/cosmwasm.wasm.v1.StoreCodeProposal", StoreCodeProposal],
    ["/cosmwasm.wasm.v1.MsgUnpinCodesResponse", MsgUnpinCodesResponse],
    ["/cosmwasm.wasm.v1.QueryAllContractStateRequest", QueryAllContractStateRequest],
    ["/cosmwasm.wasm.v1.MsgExecuteContract", MsgExecuteContract],
    ["/cosmwasm.wasm.v1.ContractInfo", ContractInfo],
    ["/cosmwasm.wasm.v1.MsgClearAdminResponse", MsgClearAdminResponse],
    ["/cosmwasm.wasm.v1.QueryContractHistoryRequest", QueryContractHistoryRequest],
    ["/cosmwasm.wasm.v1.QueryContractHistoryResponse", QueryContractHistoryResponse],
    ["/cosmwasm.wasm.v1.QueryBuildAddressRequest", QueryBuildAddressRequest],
    ["/cosmwasm.wasm.v1.CombinedLimit", CombinedLimit],
    ["/cosmwasm.wasm.v1.Code", Code],
    ["/cosmwasm.wasm.v1.InstantiateContractProposal", InstantiateContractProposal],
    ["/cosmwasm.wasm.v1.MsgStoreCode", MsgStoreCode],
    ["/cosmwasm.wasm.v1.MsgUnpinCodes", MsgUnpinCodes],
    ["/cosmwasm.wasm.v1.QueryContractInfoResponse", QueryContractInfoResponse],
    ["/cosmwasm.wasm.v1.MsgIBCCloseChannel", MsgIBCCloseChannel],
    ["/cosmwasm.wasm.v1.MsgStoreAndMigrateContractResponse", MsgStoreAndMigrateContractResponse],
    ["/cosmwasm.wasm.v1.QueryContractsByCodeResponse", QueryContractsByCodeResponse],
    ["/cosmwasm.wasm.v1.QueryParamsResponse", QueryParamsResponse],
    ["/cosmwasm.wasm.v1.QueryContractsByCreatorResponse", QueryContractsByCreatorResponse],
    ["/cosmwasm.wasm.v1.ContractGrant", ContractGrant],
    ["/cosmwasm.wasm.v1.MsgExecuteContractResponse", MsgExecuteContractResponse],
    ["/cosmwasm.wasm.v1.MsgUpdateAdminResponse", MsgUpdateAdminResponse],
    ["/cosmwasm.wasm.v1.MsgStoreCodeResponse", MsgStoreCodeResponse],
    ["/cosmwasm.wasm.v1.MsgRemoveCodeUploadParamsAddressesResponse", MsgRemoveCodeUploadParamsAddressesResponse],
    ["/cosmwasm.wasm.v1.QueryParamsRequest", QueryParamsRequest],
    ["/cosmwasm.wasm.v1.MsgIBCSendResponse", MsgIBCSendResponse],
    ["/cosmwasm.wasm.v1.QueryAllContractStateResponse", QueryAllContractStateResponse],
    ["/cosmwasm.wasm.v1.QueryCodeInfoResponse", QueryCodeInfoResponse],
    ["/cosmwasm.wasm.v1.AccessTypeParam", AccessTypeParam],
    ["/cosmwasm.wasm.v1.MsgUpdateAdmin", MsgUpdateAdmin],
    ["/cosmwasm.wasm.v1.MsgPinCodes", MsgPinCodes],
    ["/cosmwasm.wasm.v1.MsgAddCodeUploadParamsAddresses", MsgAddCodeUploadParamsAddresses],
    ["/cosmwasm.wasm.v1.MsgRemoveCodeUploadParamsAddresses", MsgRemoveCodeUploadParamsAddresses],
    ["/cosmwasm.wasm.v1.MsgUpdateContractLabelResponse", MsgUpdateContractLabelResponse],
    ["/cosmwasm.wasm.v1.MsgUpdateInstantiateConfig", MsgUpdateInstantiateConfig],
    ["/cosmwasm.wasm.v1.QuerySmartContractStateRequest", QuerySmartContractStateRequest],
    ["/cosmwasm.wasm.v1.AcceptedMessageKeysFilter", AcceptedMessageKeysFilter],
    ["/cosmwasm.wasm.v1.MsgStoreAndInstantiateContract", MsgStoreAndInstantiateContract],
    ["/cosmwasm.wasm.v1.MsgStoreAndInstantiateContractResponse", MsgStoreAndInstantiateContractResponse],
    ["/cosmwasm.wasm.v1.ContractMigrationAuthorization", ContractMigrationAuthorization],
    
];

export { msgTypes }