import { GeneratedType } from "@cosmjs/proto-signing";
import { QueryDenomMetadataResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { Balance } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/genesis";
import { SendEnabled } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/bank";
import { Metadata } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/bank";
import { MsgSend } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/tx";
import { MsgSendResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/tx";
import { SendAuthorization } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/authz";
import { QuerySpendableBalancesRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { QuerySpendableBalanceByDenomRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { DenomOwner } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { QueryDenomOwnersByQueryResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { Input } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/bank";
import { MsgUpdateParams } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/tx";
import { QuerySpendableBalancesResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { QueryDenomOwnersRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { MsgSetSendEnabled } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/tx";
import { QueryAllBalancesResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { QueryDenomsMetadataResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { Output } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/bank";
import { MsgMultiSend } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/tx";
import { MsgUpdateParamsResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/tx";
import { QuerySupplyOfRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { QueryParamsRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { QueryDenomMetadataByQueryStringResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { QueryDenomOwnersResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { QuerySendEnabledResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { MsgMultiSendResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/tx";
import { Params } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/bank";
import { QueryBalanceResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { QueryTotalSupplyResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { QueryDenomMetadataByQueryStringRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { QueryDenomOwnersByQueryRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { GenesisState } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/genesis";
import { MsgSetSendEnabledResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/tx";
import { QueryBalanceRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { QueryTotalSupplyRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { QueryDenomsMetadataRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { QueryDenomMetadataRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { QuerySendEnabledRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { QueryAllBalancesRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { QuerySpendableBalanceByDenomResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { QuerySupplyOfResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { QueryParamsResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/query";
import { Supply } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/bank";
import { DenomUnit } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/bank/v1beta1/bank";

const msgTypes: Array<[string, GeneratedType]>  = [
    ["/cosmos.bank.v1beta1.QueryDenomMetadataResponse", QueryDenomMetadataResponse],
    ["/cosmos.bank.v1beta1.Balance", Balance],
    ["/cosmos.bank.v1beta1.SendEnabled", SendEnabled],
    ["/cosmos.bank.v1beta1.Metadata", Metadata],
    ["/cosmos.bank.v1beta1.MsgSend", MsgSend],
    ["/cosmos.bank.v1beta1.MsgSendResponse", MsgSendResponse],
    ["/cosmos.bank.v1beta1.SendAuthorization", SendAuthorization],
    ["/cosmos.bank.v1beta1.QuerySpendableBalancesRequest", QuerySpendableBalancesRequest],
    ["/cosmos.bank.v1beta1.QuerySpendableBalanceByDenomRequest", QuerySpendableBalanceByDenomRequest],
    ["/cosmos.bank.v1beta1.DenomOwner", DenomOwner],
    ["/cosmos.bank.v1beta1.QueryDenomOwnersByQueryResponse", QueryDenomOwnersByQueryResponse],
    ["/cosmos.bank.v1beta1.Input", Input],
    ["/cosmos.bank.v1beta1.MsgUpdateParams", MsgUpdateParams],
    ["/cosmos.bank.v1beta1.QuerySpendableBalancesResponse", QuerySpendableBalancesResponse],
    ["/cosmos.bank.v1beta1.QueryDenomOwnersRequest", QueryDenomOwnersRequest],
    ["/cosmos.bank.v1beta1.MsgSetSendEnabled", MsgSetSendEnabled],
    ["/cosmos.bank.v1beta1.QueryAllBalancesResponse", QueryAllBalancesResponse],
    ["/cosmos.bank.v1beta1.QueryDenomsMetadataResponse", QueryDenomsMetadataResponse],
    ["/cosmos.bank.v1beta1.Output", Output],
    ["/cosmos.bank.v1beta1.MsgMultiSend", MsgMultiSend],
    ["/cosmos.bank.v1beta1.MsgUpdateParamsResponse", MsgUpdateParamsResponse],
    ["/cosmos.bank.v1beta1.QuerySupplyOfRequest", QuerySupplyOfRequest],
    ["/cosmos.bank.v1beta1.QueryParamsRequest", QueryParamsRequest],
    ["/cosmos.bank.v1beta1.QueryDenomMetadataByQueryStringResponse", QueryDenomMetadataByQueryStringResponse],
    ["/cosmos.bank.v1beta1.QueryDenomOwnersResponse", QueryDenomOwnersResponse],
    ["/cosmos.bank.v1beta1.QuerySendEnabledResponse", QuerySendEnabledResponse],
    ["/cosmos.bank.v1beta1.MsgMultiSendResponse", MsgMultiSendResponse],
    ["/cosmos.bank.v1beta1.Params", Params],
    ["/cosmos.bank.v1beta1.QueryBalanceResponse", QueryBalanceResponse],
    ["/cosmos.bank.v1beta1.QueryTotalSupplyResponse", QueryTotalSupplyResponse],
    ["/cosmos.bank.v1beta1.QueryDenomMetadataByQueryStringRequest", QueryDenomMetadataByQueryStringRequest],
    ["/cosmos.bank.v1beta1.QueryDenomOwnersByQueryRequest", QueryDenomOwnersByQueryRequest],
    ["/cosmos.bank.v1beta1.GenesisState", GenesisState],
    ["/cosmos.bank.v1beta1.MsgSetSendEnabledResponse", MsgSetSendEnabledResponse],
    ["/cosmos.bank.v1beta1.QueryBalanceRequest", QueryBalanceRequest],
    ["/cosmos.bank.v1beta1.QueryTotalSupplyRequest", QueryTotalSupplyRequest],
    ["/cosmos.bank.v1beta1.QueryDenomsMetadataRequest", QueryDenomsMetadataRequest],
    ["/cosmos.bank.v1beta1.QueryDenomMetadataRequest", QueryDenomMetadataRequest],
    ["/cosmos.bank.v1beta1.QuerySendEnabledRequest", QuerySendEnabledRequest],
    ["/cosmos.bank.v1beta1.QueryAllBalancesRequest", QueryAllBalancesRequest],
    ["/cosmos.bank.v1beta1.QuerySpendableBalanceByDenomResponse", QuerySpendableBalanceByDenomResponse],
    ["/cosmos.bank.v1beta1.QuerySupplyOfResponse", QuerySupplyOfResponse],
    ["/cosmos.bank.v1beta1.QueryParamsResponse", QueryParamsResponse],
    ["/cosmos.bank.v1beta1.Supply", Supply],
    ["/cosmos.bank.v1beta1.DenomUnit", DenomUnit],
    
];

export { msgTypes }