import { GeneratedType } from "@cosmjs/proto-signing";
import { MsgEditValidator } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/tx";
import { QueryValidatorsResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { QueryValidatorUnbondingDelegationsResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { QueryDelegatorDelegationsRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { MsgBeginRedelegate } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/tx";
import { Redelegation } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/staking";
import { StakeAuthorization } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/authz";
import { MsgUndelegate } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/tx";
import { MsgCancelUnbondingDelegationResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/tx";
import { RedelegationEntry } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/staking";
import { ValidatorUpdates } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/staking";
import { QueryValidatorRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { QueryDelegatorDelegationsResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { Description } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/staking";
import { UnbondingDelegationEntry } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/staking";
import { StakeAuthorization_Validators } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/authz";
import { QueryHistoricalInfoResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { QueryUnbondingDelegationResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { QueryDelegatorValidatorRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { MsgDelegate } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/tx";
import { MsgUndelegateResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/tx";
import { RedelegationEntryResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/staking";
import { LastValidatorPower } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/genesis";
import { MsgCreateValidator } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/tx";
import { QueryDelegatorUnbondingDelegationsRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { QueryPoolRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { QueryValidatorResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { MsgCreateValidatorResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/tx";
import { CommissionRates } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/staking";
import { QueryRedelegationsRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { QueryDelegatorValidatorsResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { DVPairs } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/staking";
import { QueryValidatorsRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { QueryValidatorUnbondingDelegationsRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { QueryDelegatorValidatorsRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { UnbondingDelegation } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/staking";
import { DelegationResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/staking";
import { QueryParamsRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { MsgUpdateParams } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/tx";
import { Commission } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/staking";
import { QueryDelegationResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { DVVTriplet } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/staking";
import { HistoricalInfo } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/staking";
import { QueryValidatorDelegationsResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { QueryDelegationRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { QueryUnbondingDelegationRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { QueryDelegatorValidatorResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { ValAddresses } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/staking";
import { Delegation } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/staking";
import { QueryHistoricalInfoRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { QueryParamsResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { MsgUpdateParamsResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/tx";
import { Validator } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/staking";
import { QueryValidatorDelegationsRequest } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { QueryPoolResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { MsgEditValidatorResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/tx";
import { MsgDelegateResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/tx";
import { MsgBeginRedelegateResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/tx";
import { GenesisState } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/genesis";
import { RedelegationResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/staking";
import { Pool } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/staking";
import { Params } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/staking";
import { QueryRedelegationsResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { MsgCancelUnbondingDelegation } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/tx";
import { DVPair } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/staking";
import { QueryDelegatorUnbondingDelegationsResponse } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/query";
import { DVVTriplets } from "./types/../../../../go/pkg/mod/github.com/cosmos/cosmos-sdk@v0.50.12/proto/cosmos/staking/v1beta1/staking";

const msgTypes: Array<[string, GeneratedType]>  = [
    ["/cosmos.staking.v1beta1.MsgEditValidator", MsgEditValidator],
    ["/cosmos.staking.v1beta1.QueryValidatorsResponse", QueryValidatorsResponse],
    ["/cosmos.staking.v1beta1.QueryValidatorUnbondingDelegationsResponse", QueryValidatorUnbondingDelegationsResponse],
    ["/cosmos.staking.v1beta1.QueryDelegatorDelegationsRequest", QueryDelegatorDelegationsRequest],
    ["/cosmos.staking.v1beta1.MsgBeginRedelegate", MsgBeginRedelegate],
    ["/cosmos.staking.v1beta1.Redelegation", Redelegation],
    ["/cosmos.staking.v1beta1.StakeAuthorization", StakeAuthorization],
    ["/cosmos.staking.v1beta1.MsgUndelegate", MsgUndelegate],
    ["/cosmos.staking.v1beta1.MsgCancelUnbondingDelegationResponse", MsgCancelUnbondingDelegationResponse],
    ["/cosmos.staking.v1beta1.RedelegationEntry", RedelegationEntry],
    ["/cosmos.staking.v1beta1.ValidatorUpdates", ValidatorUpdates],
    ["/cosmos.staking.v1beta1.QueryValidatorRequest", QueryValidatorRequest],
    ["/cosmos.staking.v1beta1.QueryDelegatorDelegationsResponse", QueryDelegatorDelegationsResponse],
    ["/cosmos.staking.v1beta1.Description", Description],
    ["/cosmos.staking.v1beta1.UnbondingDelegationEntry", UnbondingDelegationEntry],
    ["/cosmos.staking.v1beta1.StakeAuthorization_Validators", StakeAuthorization_Validators],
    ["/cosmos.staking.v1beta1.QueryHistoricalInfoResponse", QueryHistoricalInfoResponse],
    ["/cosmos.staking.v1beta1.QueryUnbondingDelegationResponse", QueryUnbondingDelegationResponse],
    ["/cosmos.staking.v1beta1.QueryDelegatorValidatorRequest", QueryDelegatorValidatorRequest],
    ["/cosmos.staking.v1beta1.MsgDelegate", MsgDelegate],
    ["/cosmos.staking.v1beta1.MsgUndelegateResponse", MsgUndelegateResponse],
    ["/cosmos.staking.v1beta1.RedelegationEntryResponse", RedelegationEntryResponse],
    ["/cosmos.staking.v1beta1.LastValidatorPower", LastValidatorPower],
    ["/cosmos.staking.v1beta1.MsgCreateValidator", MsgCreateValidator],
    ["/cosmos.staking.v1beta1.QueryDelegatorUnbondingDelegationsRequest", QueryDelegatorUnbondingDelegationsRequest],
    ["/cosmos.staking.v1beta1.QueryPoolRequest", QueryPoolRequest],
    ["/cosmos.staking.v1beta1.QueryValidatorResponse", QueryValidatorResponse],
    ["/cosmos.staking.v1beta1.MsgCreateValidatorResponse", MsgCreateValidatorResponse],
    ["/cosmos.staking.v1beta1.CommissionRates", CommissionRates],
    ["/cosmos.staking.v1beta1.QueryRedelegationsRequest", QueryRedelegationsRequest],
    ["/cosmos.staking.v1beta1.QueryDelegatorValidatorsResponse", QueryDelegatorValidatorsResponse],
    ["/cosmos.staking.v1beta1.DVPairs", DVPairs],
    ["/cosmos.staking.v1beta1.QueryValidatorsRequest", QueryValidatorsRequest],
    ["/cosmos.staking.v1beta1.QueryValidatorUnbondingDelegationsRequest", QueryValidatorUnbondingDelegationsRequest],
    ["/cosmos.staking.v1beta1.QueryDelegatorValidatorsRequest", QueryDelegatorValidatorsRequest],
    ["/cosmos.staking.v1beta1.UnbondingDelegation", UnbondingDelegation],
    ["/cosmos.staking.v1beta1.DelegationResponse", DelegationResponse],
    ["/cosmos.staking.v1beta1.QueryParamsRequest", QueryParamsRequest],
    ["/cosmos.staking.v1beta1.MsgUpdateParams", MsgUpdateParams],
    ["/cosmos.staking.v1beta1.Commission", Commission],
    ["/cosmos.staking.v1beta1.QueryDelegationResponse", QueryDelegationResponse],
    ["/cosmos.staking.v1beta1.DVVTriplet", DVVTriplet],
    ["/cosmos.staking.v1beta1.HistoricalInfo", HistoricalInfo],
    ["/cosmos.staking.v1beta1.QueryValidatorDelegationsResponse", QueryValidatorDelegationsResponse],
    ["/cosmos.staking.v1beta1.QueryDelegationRequest", QueryDelegationRequest],
    ["/cosmos.staking.v1beta1.QueryUnbondingDelegationRequest", QueryUnbondingDelegationRequest],
    ["/cosmos.staking.v1beta1.QueryDelegatorValidatorResponse", QueryDelegatorValidatorResponse],
    ["/cosmos.staking.v1beta1.ValAddresses", ValAddresses],
    ["/cosmos.staking.v1beta1.Delegation", Delegation],
    ["/cosmos.staking.v1beta1.QueryHistoricalInfoRequest", QueryHistoricalInfoRequest],
    ["/cosmos.staking.v1beta1.QueryParamsResponse", QueryParamsResponse],
    ["/cosmos.staking.v1beta1.MsgUpdateParamsResponse", MsgUpdateParamsResponse],
    ["/cosmos.staking.v1beta1.Validator", Validator],
    ["/cosmos.staking.v1beta1.QueryValidatorDelegationsRequest", QueryValidatorDelegationsRequest],
    ["/cosmos.staking.v1beta1.QueryPoolResponse", QueryPoolResponse],
    ["/cosmos.staking.v1beta1.MsgEditValidatorResponse", MsgEditValidatorResponse],
    ["/cosmos.staking.v1beta1.MsgDelegateResponse", MsgDelegateResponse],
    ["/cosmos.staking.v1beta1.MsgBeginRedelegateResponse", MsgBeginRedelegateResponse],
    ["/cosmos.staking.v1beta1.GenesisState", GenesisState],
    ["/cosmos.staking.v1beta1.RedelegationResponse", RedelegationResponse],
    ["/cosmos.staking.v1beta1.Pool", Pool],
    ["/cosmos.staking.v1beta1.Params", Params],
    ["/cosmos.staking.v1beta1.QueryRedelegationsResponse", QueryRedelegationsResponse],
    ["/cosmos.staking.v1beta1.MsgCancelUnbondingDelegation", MsgCancelUnbondingDelegation],
    ["/cosmos.staking.v1beta1.DVPair", DVPair],
    ["/cosmos.staking.v1beta1.QueryDelegatorUnbondingDelegationsResponse", QueryDelegatorUnbondingDelegationsResponse],
    ["/cosmos.staking.v1beta1.DVVTriplets", DVVTriplets],
    
];

export { msgTypes }